NIFI-6363 Fix Hadoop compile problem.  Add GCP IT instructions.